change link to sudoku blog post

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1 class="sudoku__title">Sudoku Solver</h1>
           <p class="sudoku-description"> Welcome to the Sudoku Solver.</p>
           <p class="sudoku-description">Generate a new Sudoku, and click 'Solve' to get a solution. <br><br>
-          More information about this solver can be found <a target="_blank" href="https://www.jfricker.com">here</a>. </p>
+          More information about this solver can be found <a target="_blank" href="https://www.jfricker.com/blog/sudoku-solver/">here</a>. </p>
 
         </div>
         <input type="button" value="Solve" class="button button-1">
